--- a/CD Player/CD Player.csproj
+++ b/CD Player/CD Player.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +79,54 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Save_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Save_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Open_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Open_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Play_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Play_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Eject_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Eject_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Exit_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Exit_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Lightbulb_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Lightbulb_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\PlayTrack_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\PlayTrack_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\SaveTrack_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\SaveTrack_light_mode.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
