--- a/CD Player/CD Player.csproj
+++ b/CD Player/CD Player.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,14 +49,47 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyURL.cs" />
+    <Compile Include="CompactDisc.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IAudioStorage.cs" />
+    <Compile Include="Interop\CDROM_TOC.cs" />
+    <Compile Include="Interop\Constances.cs" />
+    <Compile Include="Interop\DriveTypes.cs" />
+    <Compile Include="Interop\ExternalFunctions.cs" />
+    <Compile Include="Interop\PREVENT_MEDIA_REMOVAL.cs" />
+    <Compile Include="Interop\RAW_READ_INFO.cs" />
+    <Compile Include="Interop\TrackDataList.cs" />
+    <Compile Include="Interop\TRACK_DATA.cs" />
+    <Compile Include="Interop\TRACK_MODE_TYPE.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wave\AdditionSampleMixer.cs" />
+    <Compile Include="Wave\AverageSampleMixer.cs" />
+    <Compile Include="Wave\BitsPerSample.cs" />
+    <Compile Include="Wave\FormatChangedEventArgs.cs" />
+    <Compile Include="Wave\ISampleMixer.cs" />
+    <Compile Include="Wave\LIST_Tag.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_Album.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_Artist.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_Comment.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_ContentDescription.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_EncodedBy.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_Genre.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_Keywords.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_Title.cs" />
+    <Compile Include="Wave\LIST_Tags\ILIST_Tag_TrackNumber.cs" />
+    <Compile Include="Wave\LIST_Tags\LIST_TagRegistry.cs" />
+    <Compile Include="Wave\LIST_Tags\WordAlignHelper.cs" />
+    <Compile Include="Wave\TaggedWaveData.cs" />
+    <Compile Include="Wave\WaveData.cs" />
+    <Compile Include="Wave\WaveFormat.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -127,6 +163,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\SaveTrack_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Info_dark_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\Info_light_mode.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="favicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
