--- a/CD Player/CD Player.csproj
+++ b/CD Player/CD Player.csproj
@@ -53,13 +53,19 @@
     <Compile Include="AssemblyInfoHelper.cs" />
     <Compile Include="AssemblyURL.cs" />
     <Compile Include="CompactDisc.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainWindow.Designer.cs">
+      <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="IAudioStorage.cs" />
+    <Compile Include="Info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Info.Designer.cs">
+      <DependentUpon>Info.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interop\CDROM_TOC.cs" />
     <Compile Include="Interop\Constances.cs" />
     <Compile Include="Interop\DriveTypes.cs" />
@@ -92,8 +98,11 @@
     <Compile Include="Wave\TaggedWaveData.cs" />
     <Compile Include="Wave\WaveData.cs" />
     <Compile Include="Wave\WaveFormat.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainWindow.resx">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Info.resx">
+      <DependentUpon>Info.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
